@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.6 2018/02/05 19:01:54 minskim Exp $
+$NetBSD: distinfo,v 1.7 2019/07/31 15:21:50 brook Exp $
 
-SHA1 (R/evaluate_0.10.1.tar.gz) = 7cbf409b310687e055dbb86ae653c1fd8e1e1544
-RMD160 (R/evaluate_0.10.1.tar.gz) = 3e2eb2798d707d57358bd748bc43970849f45041
-SHA512 (R/evaluate_0.10.1.tar.gz) = 90788654e0a77ad913b4836bde988725b6fc576d681dc0ed1e11522b4049c52a31fca602dbb076955fe5d937a04e63b5ca5dd82de3465c585f3aa229d902e4fb
-Size (R/evaluate_0.10.1.tar.gz) = 22177 bytes
+SHA1 (R/evaluate_0.14.tar.gz) = 956955348a501d6800571f9df72da2f60f4a56e8
+RMD160 (R/evaluate_0.14.tar.gz) = 2cbe96c9370834ca2bd04f45f79979ec37557b1b
+SHA512 (R/evaluate_0.14.tar.gz) = 3a74a7fd9ce7d933a3070954c54ab36ca39b0fe5b90227ebaa7a35bff7642ce438240034f43f40f47e7d80788489ad6018fc5901dc7266df773fe380e16105a5
+Size (R/evaluate_0.14.tar.gz) = 24206 bytes
